tests/lime/fail/tokens/macro_first/byte_52.wsa
macro 4 [push 52] 4
